# handsfree-imu

./: CMakeLists.txt  README.md  imu_sp.h  main.cpp
include/: serialPort.h
lib/: 链接库.txt
src/: imu_sp.cpp  serialPort.cpp
