cmake_minimum_required (VERSION 2.8)
project (imu)
SET(CMAKE_BUILD_TYPE DEBUG)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11  -pthread" )
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib /home/ws/boost/libs)
find_package(Boost REQUIRED)
find_package(Threads REQUIRED)
if(NOT Boost_FOUND)
    message("Not found Boost")
endif()
include_directories(${CMAKE_SOURCE_DIR}/include /home/ws/boost)
add_executable(main src/main.cpp src/imu_sp.cpp src/serialPort.cpp) 
